Fixed text align in cards

--- a/work/static/work/css/desktop/index.css
+++ b/work/static/work/css/desktop/index.css
@@ -25,6 +25,8 @@
     flex-direction: column;
     justify-content: center;
     width: 66%;
+
+    padding: 1rem 2rem;
 }
 
 /* Filter controls */
@@ -73,4 +75,9 @@
 .card-img {
     width: 600px; 
     height: 400px;
+}
+
+/* Card text */
+.card-text {
+    text-align: justify;
 }
